[package]
name = "taglib"
description = "Rust bindings for TagLib"
version = "1.0.0"
authors = ["Emmanuele Bassi <ebassi@gnome.org>", "Chris Down <chris@chrisdown.name>"]
license = "MIT"
repository = "https://github.com/ebassi/taglib-rust/"
keywords = ["taglib", "media", "tags", "metadata"]
homepage = "http://ebassi.github.io/taglib-rust/"
documentation = "http://ebassi.github.io/taglib-rust/docs/taglib/"

[lib]
name = "taglib"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dependencies.taglib-sys]
path = "taglib-sys"
version = "1.0.0"

[features]
default = []
use-pkgconfig = ["taglib-sys/use-pkgconfig"]
